# Fem_solver

./: CMakeLists.txt  README.md  Test1_4_4.txt  Test_gmsh.txt  main.cpp  mesh2.txt
include/: matrix.h  structs.h
src/: fem_funcs.cpp  fem_solve.cpp  gauss.cpp  load_function.cpp  nas_to_mesh.cpp  write_to_vtu.cpp
